bk_ida/gccida/c2/clear_edges
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:658:12: error: expected expression
*( _OWORD *)v7 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:658:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v7 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:659:12: error: expected expression
*( _OWORD *)( v7 + 16) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:659:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v7 + 16) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:660:12: error: expected expression
*( _OWORD *)( v7 + 32) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:660:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v7 + 32) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:661:12: error: expected expression
*( _OWORD *)( v7 + 48) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:661:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v7 + 48) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:670:12: error: expected expression
*( _OWORD *)( v3 + 32) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:670:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 + 32) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:684:12: error: expected expression
*( _OWORD *)&v11->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:684:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->pred_next = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:685:12: error: expected expression
*( _OWORD *)&v11->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:685:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:686:12: error: expected expression
*( _OWORD *)&v11->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:686:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:687:12: error: expected expression
*( _OWORD *)&v11->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/cfg.c:687:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->flags = 0LL; 
   ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_edges/src/obj/cfg.o] Error 1
